--- a/client/src/app/dashbaord/dashbaord.component.html
+++ b/client/src/app/dashbaord/dashbaord.component.html
@@ -1,53 +1,63 @@
-<!-- <div class="row text-center">
-    <h3 class="display-4 text-capitalize">Event Management System</h3>
-</div>
-<div *ngIf="roleName === 'PLANNER'">
-    <div class="card mt-4">
-        <div class="card-body">
-            <app-add-resource></app-add-resource>   
+
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark px-3">
+    <a class="navbar-brand" href="#">Dashboard</a>
+    <div class="collapse navbar-collapse">
+        <ul class="navbar-nav mr-auto">
+            <li class="nav-item" *ngIf="roleName === 'PLANNER'">
+                <a class="nav-link" routerLink="/create-event">Create Event</a>
+            </li>
+            <li class="nav-item" *ngIf="roleName === 'PLANNER'">
+                <a class="nav-link" routerLink="/add-resource">Add Resource</a>
+            </li>
+            <li class="nav-item" *ngIf="roleName === 'PLANNER'">
+                <a class="nav-link" routerLink="/resource-allocate">Allocate Resource</a>
+            </li>
+            <li class="nav-item" *ngIf="roleName === 'STAFF'">
+                <a class="nav-link" routerLink="/view-events">View Events</a>
+            </li>
+            <li class="nav-item" *ngIf="roleName === 'CLIENT'">
+                <a class="nav-link" routerLink="/booking-details">Booking Details</a>
+            </li>
+        </ul>
+        <ul class="navbar-nav ml-auto">
+            <li class="nav-item">
+                <button class="btn btn-outline-light" (click)="logout()">Logout</button>
+            </li>
+        </ul>
+    </div>
+</nav>
+
+<div class="container mt-4">
+    <h3 class="display-4 text-center text-capitalize mb-4">Event Management System</h3>
+    <div *ngIf="roleName === 'PLANNER'">
+        <div class="card mb-4">
+            <div class="card-body">
+                <app-add-resource></app-add-resource>
+            </div>
+        </div>
+        <div class="card mb-4">
+            <div class="card-body">
+                <app-create-event></app-create-event>
+            </div>
+        </div>
+        <div class="card mb-4">
+            <div class="card-body">
+                <app-resource-allocate></app-resource-allocate>
+            </div>
         </div>
     </div>
-    <div class="card mt-4">
-        <div class="card-body">
-            <app-event></app-event>
+    <div *ngIf="roleName === 'STAFF'">
+        <div class="card mb-4">
+            <div class="card-body">
+                <app-view-events></app-view-events>
+            </div>
         </div>
     </div>
-    <div class="card mt-4">
-        <div class="card-body">
-            <app-resource-allocate></app-resource-allocate>
+    <div *ngIf="roleName === 'CLIENT'">
+        <div class="card mb-4">
+            <div class="card-body">
+                <app-booking-details></app-booking-details>
+            </div>
         </div>
     </div>
-</div>
-<div *ngIf="roleName === 'STAFF'">
-    <div class="card mt-4">
-        <div class="card-body">
-            <app-view-events></app-view-events>
-        </div>
-    </div>
-</div>
-<div *ngIf="roleName === 'CLIENT'">
-    <div class="card mt-4">
-        <div class="card-body">
-            <app-booking-details></app-booking-details> 
-        </div>
-    </div>
-</div>
-
-
-
-<!-- Planner -->
-<div class="d-flex justify-content-center" *ngIf="roleName === 'PLANNER'">
-  <!-- <app-landing-page></app-landing-page> -->
-
-</div>
-
-<!-- Staff -->
-<div *ngIf="roleName === 'STAFF'">
-  <!-- <app-landing-page></app-landing-page> -->
-</div>
-
-
-<!-- <CLIENT> -->
-<div *ngIf="roleName === 'CLIENT'">
-  <!-- <app-landing-page></app-landing-page> -->
 </div>
